# redeye

./: .dockerignore  .gitignore  CHANGES.md  Cargo.toml  Dockerfile  README.md  build-docker.sh  docker-push.sh  emit.sh  release.txt  rustfmt.toml
benches/: lib.rs
src/: main.rs
src/redeye/: buf.rs  enrich.rs  input.rs  io.rs  lib.rs  output.rs  parser.rs  send.rs  types.rs
util/: server.py
