[package]
name = "redeye"
version = "0.3.0"
authors = ["TSH Labs"]
description = "Parse Apache-style access logs into Logstash JSON"
homepage = "https://github.com/tshlabs/redeye"
repository = "https://github.com/tshlabs/redeye.git"
readme = "README.md"
license = "GPL-3.0+"
keywords = ["logs", "parsing", "cli", "ncsa"]
edition = "2018"

[dependencies]
chrono = "0.4"
clap = "2.32"
failure = "0.1"
failure_derive = "0.1"
regex = "1.0"
serde = "1.0"
serde_json = "1.0"

[lib]
name = "redeye"
path = "src/redeye/lib.rs"
