[package]
name = "redeye"
version = "0.3.0"
authors = ["Nick Pillitteri"]
description = "Parse Apache-style access logs into Logstash JSON"
homepage = "https://github.com/56quarters/redeye"
repository = "https://github.com/56quarters/redeye.git"
readme = "README.md"
license = "GPL-3.0+"
keywords = ["logs", "parsing", "cli", "ncsa"]
edition = "2018"

[dependencies]
chrono = "0.4"
clap = "3.0.0-beta.2"
clap_derive = "3.0.0-beta.2"
regex = "1.0"
serde = "1.0"
serde_json = "1.0"

[lib]
name = "redeye"
path = "src/redeye/lib.rs"

[badges]
travis-ci = { repository = "56quarters/redeye" }
